# mcp-crawler-poc

./: ollama.py  pyproject.toml
app/: client.py  server.py
