[tool.poetry]
name = "mcps"
version = "0.1.0"
description = ""
authors = ["Luka L <licina.luka@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mcp = {version = "1.6.0", extras = ["cli"]}
requests = "2.32.3"
selenium = "4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
